--- a/_posts/2021-05-03-DARTS.md
+++ b/_posts/2021-05-03-DARTS.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Differentiable Architecture Search (DARTS)의 원리"
 categories: ['Neural Architecture Search']
-
+math: true
 ---
 ## Introduction
 저번 포스팅에서 Neural Architecture Search가 무엇인지 간략하게 설명하였다. 이번에는 내가 석사논문연구를 하면서 사용한 NAS방법론인
