Enable Disqus comments in posts

--- a/_posts/2021-04-26-NAS.md
+++ b/_posts/2021-04-26-NAS.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Neural Architecture Search란?"
 categories: ['Neural Architecture Search']
+comments: true
 
 ---
 ## Introduction
