--- a/_posts/2021-05-03-DARTS.md
+++ b/_posts/2021-05-03-DARTS.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Differentiable Architecture Search (DARTS)의 원리"
+title: "Differentiable Architecture Search (DARTS)"
 categories: ['Neural Architecture Search']
 math: true
 toc: true
@@ -8,7 +8,8 @@ comments: true
 ---
 ## Introduction
 저번 포스팅에서 Neural Architecture Search가 무엇인지 간략하게 설명하였다. 이번에는 내가 석사논문연구를 하면서 사용한 NAS방법론인
-[Differentiable Architecture Search (Liu et. al 2019)][DARTS]에 대해서 다루어 보겠다.
+[Differentiable Architecture Search (Liu et. al 2019)][DARTS]에 대해서 다루어 보겠다. 이 포스팅에서는 DARTS의 수학적 원리를 주로
+설명할 것이다.
 
 [DARTS]: https://arxiv.org/abs/1806.09055.pdf
 
